--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -2,16 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
+    android:orientation="vertical"
     tools:context="com.localfriend.fragments.AddressFragment">
 
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/MyTextInputLayout"
-        android:layout_marginTop="@dimen/dim_10">
+        android:layout_marginTop="@dimen/dim_10"
+        android:theme="@style/MyTextInputLayout">
 
         <EditText
             android:id="@+id/edt_full_name"
@@ -28,11 +28,12 @@
 
 
     </android.support.design.widget.TextInputLayout>
+
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/MyTextInputLayout"
-        android:layout_marginTop="@dimen/dim_5">
+        android:layout_marginTop="@dimen/dim_5"
+        android:theme="@style/MyTextInputLayout">
 
         <EditText
             android:id="@+id/edt_flat_no"
@@ -49,11 +50,12 @@
 
 
     </android.support.design.widget.TextInputLayout>
+
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/MyTextInputLayout"
-        android:layout_marginTop="@dimen/dim_5">
+        android:layout_marginTop="@dimen/dim_5"
+        android:theme="@style/MyTextInputLayout">
 
         <EditText
             android:id="@+id/edt_street_name"
@@ -70,11 +72,12 @@
 
 
     </android.support.design.widget.TextInputLayout>
+
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/MyTextInputLayout"
-        android:layout_marginTop="@dimen/dim_5">
+        android:layout_marginTop="@dimen/dim_5"
+        android:theme="@style/MyTextInputLayout">
 
         <EditText
             android:id="@+id/edt_city_name"
@@ -91,11 +94,12 @@
 
 
     </android.support.design.widget.TextInputLayout>
+
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/MyTextInputLayout"
-        android:layout_marginTop="@dimen/dim_5">
+        android:layout_marginTop="@dimen/dim_5"
+        android:theme="@style/MyTextInputLayout">
 
         <EditText
             android:id="@+id/edt_phone_no"
@@ -104,9 +108,7 @@
             android:hint="Enter Phone Number"
             android:imeOptions="actionUnspecified"
             android:inputType="phone"
-
             android:maxLines="1"
-            android:singleLine="true"
             android:textColor="@color/black"
             android:textColorHint="@color/blue_text" />
 
