--- a/app/src/main/res/drawable/rounded_top.xml
+++ b/app/src/main/res/drawable/rounded_top.xml
@@ -3,11 +3,11 @@
     android:shape="rectangle">
     <solid android:color="@color/white" />
     <stroke
-        android:width="1.0dip"
+        android:width="1dp"
         android:color="@color/colorPrimaryDark" />
-    <corners
-        android:bottomLeftRadius="0.0dip"
-        android:bottomRightRadius="0.0dip"
-        android:topLeftRadius="5.0dip"
-        android:topRightRadius="5.0dip" />
+    <!--<corners-->
+        <!--android:bottomLeftRadius="0.0dip"-->
+        <!--android:bottomRightRadius="0.0dip"-->
+        <!--android:topLeftRadius="5.0dip"-->
+        <!--android:topRightRadius="5.0dip" />-->
 </shape>
