--- a/app/src/main/res/layout/activity_login_signup.xml
+++ b/app/src/main/res/layout/activity_login_signup.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_30"
+        android:layout_marginTop="@dimen/dim_50"
         android:background="@null"
         android:src="@drawable/home_icon" />
 
@@ -20,6 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginLeft="@dimen/dim_15"
+        android:layout_marginRight="@dimen/dim_15"
         android:layout_marginBottom="@dimen/dim_50"
         android:orientation="vertical">
 
@@ -30,7 +31,7 @@
             android:padding="@dimen/dim_10"
             android:text="Hello there, I'm your Local Friend"
             android:textColor="@color/white"
-            android:textSize="@dimen/dim_16" />
+            android:textSize="@dimen/dim_14" />
 
         <TextView
             android:layout_width="match_parent"
@@ -40,7 +41,7 @@
             android:padding="@dimen/dim_10"
             android:text="I'm here to help you with anything , anytime"
             android:textColor="@color/white"
-            android:textSize="@dimen/dim_16" />
+            android:textSize="@dimen/dim_14" />
 
         <TextView
             android:layout_width="match_parent"
@@ -61,8 +62,9 @@
             android:layout_gravity="right"
             android:layout_marginTop="@dimen/dim_25"
             android:background="@null"
+            android:padding="@dimen/dim_5"
             android:text="Already have an account ? "
             android:textColor="@color/white"
-            android:textSize="@dimen/dim_18" />
+            android:textSize="@dimen/dim_16" />
     </LinearLayout>
 </RelativeLayout>
