--- a/app/src/main/res/layout/breakfast_item.xml
+++ b/app/src/main/res/layout/breakfast_item.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:padding="@dimen/dim_10">
 
     <FrameLayout
         android:id="@+id/frame_breakfast"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/dim_20">
 
         <android.support.v7.widget.CardView
-            android:layout_width="@dimen/dim_250"
-            android:layout_height="@dimen/dim_200"
-            card_view:cardCornerRadius="10"
-          app:cardBackgroundColor="@color/bg_color"
-            >
-            <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dim_250"
+            app:cardBackgroundColor="@color/bg_color"
+            app:cardCornerRadius="@dimen/dim_10"
+            app:cardElevation="@dimen/dim_10">
+
+            <ImageView
+                android:id="@+id/rel_break_fast"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/slider_one_img"
-                android:id="@+id/rel_break_fast"/>
+                android:background="@drawable/aloo_paratha"
+                android:scaleType="centerCrop" />
 
             <!--<ImageView
                 android:layout_width="match_parent"
@@ -32,25 +34,27 @@
 
         </android.support.v7.widget.CardView>
     </FrameLayout>
+
     <TextView
+        android:id="@+id/tv_breakfast_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dim_162"
         android:layout_marginLeft="@dimen/dim_20"
+        android:layout_marginTop="@dimen/dim_210"
         android:background="#B4000000"
         android:gravity="center"
-        android:id="@+id/tv_breakfast_name"
         android:padding="@dimen/dim_8"
         android:text="Aloo Pratha"
         android:textColor="@color/white"
         android:textSize="@dimen/dim_16" />
+
     <TextView
+        android:id="@+id/tv_breakfast_cost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dim_25"
         android:background="@drawable/tv_gradient_bg"
         android:gravity="center"
-        android:id="@+id/tv_breakfast_cost"
         android:paddingBottom="@dimen/dim_5"
         android:paddingLeft="@dimen/dim_8"
         android:paddingRight="@dimen/dim_8"
@@ -60,13 +64,13 @@
         android:textSize="@dimen/dim_18" />
 
     <TextView
+        android:id="@+id/tv_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dim_200"
-        android:layout_marginTop="@dimen/dim_180"
+        android:layout_marginLeft="@dimen/dim_250"
+        android:layout_marginTop="@dimen/dim_230"
         android:background="@drawable/gradient_circle_bg"
         android:gravity="center"
-        android:id="@+id/tv_add"
         android:paddingBottom="@dimen/dim_8"
         android:paddingLeft="@dimen/dim_15"
         android:paddingRight="@dimen/dim_15"
